fix: mobile menu breaks on split

--- a/themes/bella/styles/section.navbar.scss
+++ b/themes/bella/styles/section.navbar.scss
@@ -38,6 +38,10 @@
     &[data-header-layout="logo_first_menu_center"] {
       grid-template-areas: "logo menu actions";
       grid-template-columns: 1fr 4fr 1fr;
+
+      .links {
+        justify-content: center;
+      }
     }
 
     &[data-header-layout="logo_center_menu_first"] {
@@ -111,10 +115,6 @@
     & > .actions {
       display: flex;
 
-      &:first-of-type {
-        justify-content: flex-start;
-      }
-
       &:nth-of-type(2) {
         justify-content: center;
       }
@@ -126,10 +126,7 @@
 
     .menu {
       display: flex;
-
-      &:not(:first-child) {
-        justify-content: center;
-      }
+      grid-area: menu;
 
       .mobile-links {
         display: flex;
@@ -166,13 +163,36 @@
       grid-template-columns: repeat(3, 1fr);
       padding-inline: var(--spacing-24);
 
+      &[data-header-layout="logo_center_menu_split"] {
+        .left-split {
+          grid-area: logo;
+        }
+
+        .right-split {
+          grid-area: actions;
+        }
+      }
+
+      &[data-mobile-logo-position="center"] {
+        grid-template-areas: "menu logo actions";
+        grid-template-columns: 1fr auto 1fr;
+      }
+
+      &[data-mobile-logo-position="start"] {
+        grid-template-areas: "logo menu actions";
+        grid-template-columns: 1fr auto 1fr;
+
+        .menu {
+          justify-content: center;
+        }
+      }
+
       .links {
         display: none;
       }
 
       .logo {
         display: flex;
-        justify-content: center;
       }
 
       .actions {
